fixed article background color

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
                 <div class="article">
                     
-                    <h1>article</h1>
+                    article
                     
                     <div class="multipleh"> <h1>h1,h2,h3<h1>
                     </div>
